<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToOutline="false"
        android:clipToPadding="false"
        android:paddingTop="24dp"
        android:background="#80000000">

        <FrameLayout
            android:layout_width="310dp"
            android:layout_height="144dp"
            android:clipChildren="false"
            android:clipToOutline="false"
            android:clipToPadding="false"
            android:layout_gravity="center"
            android:layout_marginHorizontal="0dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_dialog_rename"
                android:orientation="vertical"
                android:clipChildren="false"
                android:clipToOutline="false"
                android:clipToPadding="false"
                android:paddingHorizontal="20dp"
                android:paddingBottom="20dp">

                <FrameLayout
                    android:layout_width="180dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-20dp"
                    android:layout_marginHorizontal="-20dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/img_home_0">

                    <com.wanted.poster.hihi.core.custom.text.DoubleStrokeTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/tradewinds_regular"
                        android:text="@string/rename"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:shadowColor="#80000000"
                        android:shadowDy="6"
                        app:outerStrokeColor="@color/black"
                        app:outerStrokeWidth="2dp" />
                </FrameLayout>

                <EditText
                    android:id="@+id/etPlayerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/tradewinds_regular"
                    android:hint="@string/enter_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:textColor="@color/white"
                    android:textColorHint="#80FFFFFF"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="20dp"
                    android:background="#000000" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:id="@+id/btnCancelRename"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginEnd="20dp"
                        >

                        <com.wanted.poster.hihi.core.custom.text.DoubleStrokeTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/tradewinds_regular"
                            android:text="@string/cancel"
                            android:textColor="#FF5555"
                            android:textSize="20sp"
                            android:shadowColor="#80000000"
                            android:shadowDy="6"
                            app:outerStrokeColor="@color/white"
                            app:outerStrokeWidth="2dp" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/btnSaveRename"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        >

                        <com.wanted.poster.hihi.core.custom.text.DoubleStrokeTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/tradewinds_regular"
                            android:text="@string/save"
                            android:textColor="#01B401"
                            android:textSize="20sp"
                            app:outerStrokeColor="@color/white"
                            app:outerStrokeWidth="2dp"
                            android:shadowColor="#80000000"
                            android:shadowDy="6"
                            />
                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </FrameLayout>
</layout>
