<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:background="#80000000">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="17dp"
            android:clipChildren="false">

            <!-- Background -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/bg_dialog_choose_avatar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Title (floating above dialog) -->
            <FrameLayout
                android:id="@+id/flTitleAvatar"
                android:layout_width="240dp"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-28dp"
                android:background="@drawable/bg_title_choose_avatar_dialog">

                <com.wanted.poster.hihi.core.custom.text.DoubleStrokeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/tradewinds_regular"
                    android:text="@string/choose_avatar_panel"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:shadowColor="#80000000"
                    android:shadowDy="6"
                    app:outerStrokeColor="@color/white"
                    app:outerStrokeWidth="2dp" />
            </FrameLayout>

            <!-- Content -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:paddingBottom="20dp">

                <!-- Tab bar -->
                <FrameLayout
                    android:id="@+id/tabBar"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="36dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/bgSelected"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="@drawable/bg_choose_avatar_selected_any">

                        <com.wanted.poster.hihi.core.custom.text.DoubleStrokeTextView
                            android:id="@+id/tabAny"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/tradewinds_regular"
                            android:gravity="center"
                            android:text="@string/tab_any"
                            android:textColor="@color/black"
                            android:shadowColor="#80000000"
                            android:shadowDy="6"
                            app:outerStrokeColor="@color/white"
                            app:outerStrokeWidth="2dp"
                            android:textSize="16sp" />

                        <com.wanted.poster.hihi.core.custom.text.DoubleStrokeTextView
                            android:id="@+id/tabCountry"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/tradewinds_regular"
                            android:gravity="center"
                            android:shadowColor="#80000000"
                            android:shadowDy="6"
                            app:outerStrokeWidth="2dp"
                            app:outerStrokeColor="@color/black"
                            android:text="@string/tab_country"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />
                    </LinearLayout>

                </FrameLayout>

                <!-- Avatar grid -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAvatars"
                    android:layout_width="0dp"
                    android:layout_height="400dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="11dp"
                    android:clipToPadding="true"
                    android:paddingVertical="0.1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tabBar"
                    tools:listitem="@layout/item_avatar_grid"
                    tools:itemCount="20"
                    app:spanCount="3"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

                <FrameLayout
                    android:id="@+id/btnCancelAvatar"
                    android:layout_width="148dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/img_home_0"
                    app:layout_constraintEnd_toStartOf="@id/btnSaveAvatar"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvAvatars">

                    <com.wanted.poster.hihi.core.custom.text.DoubleStrokeTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/tradewinds_regular"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:outerStrokeColor="@color/black"
                        app:outerStrokeWidth="2dp" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btnSaveAvatar"
                    android:layout_width="148dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/img_home_0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnCancelAvatar"
                    app:layout_constraintTop_toBottomOf="@id/rvAvatars">

                    <com.wanted.poster.hihi.core.custom.text.DoubleStrokeTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/tradewinds_regular"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:outerStrokeColor="@color/black"
                        app:outerStrokeWidth="2dp" />
                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </FrameLayout>
</layout>
