<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_app.mycreation.MyCreationActivity">

    <!-- Background -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_bg_language" />

    <!-- Action Bar -->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <!--quyen-->
<!--    &lt;!&ndash; Native Ad (regular) - Above list &ndash;&gt;-->
<!--    <FrameLayout-->
<!--        android:id="@+id/nativeMyDesgin"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="5dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tabContainer"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:elevation="3dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent">-->

<!--        <include layout="@layout/ads_shimmer_collap_native_banner" />-->
<!--    </FrameLayout>-->
    <!--quyen-->

    <!-- Tab Layout -->
    <LinearLayout
        android:id="@+id/tabContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/layoutActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tabMyDesign"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:layout_marginEnd="0dp"
            android:background="@drawable/tab_selector"
            android:text="@string/my_filter"
            android:textColor="@color/tab_text_color"
            android:textSize="18sp"
            android:fontFamily="@font/joan_regular"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/tabMyWanted"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:layout_marginStart="0dp"
            android:background="@drawable/tab_selector"
            android:text="@string/my_wanted"
            android:textColor="@color/tab_text_color"
            android:textSize="18sp"
            android:fontFamily="@font/joan_regular"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <!-- RecyclerView Grid -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDesigns"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="12dp"
        android:clipToPadding="true"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/tabContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="16dp"
        tools:listitem="@layout/layout_poster_template_1" />

    <!-- Empty State -->
    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="360:140"
        android:text="@string/no_item_here"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="visible"
        android:gravity="center"
        android:fontFamily="@font/joan_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--quyen-->
    <!-- Native Collapsible Ad - Bottom -->
    <FrameLayout
        android:id="@+id/nativeCollapMyDesgin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </FrameLayout>
    <!--quyen-->

</androidx.constraintlayout.widget.ConstraintLayout>
